<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/action_home"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_rate"/>
    <item
        android:id="@+id/action_purchase"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_purchase"/>
    
</menu>