<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/header_home"
            android:scaleType="centerInside"
            android:contentDescription="Header and logo"/>

    <RelativeLayout
        android:id="@+id/rlButtonWrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/button_dynamic"
            style="@style/Button.Home.Dark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/button_dynamic"
            android:onClick="buttonAction"
            android:layout_marginRight="@dimen/button_home_margin"
            android:layout_marginBottom="@dimen/button_home_margin"/>

        <Button
            android:id="@+id/button_single"
            style="@style/Button.Home.Light"
            android:layout_alignTop="@+id/button_dynamic"
            android:layout_toRightOf="@+id/button_dynamic"
            android:text="@string/button_single"
            android:onClick="buttonAction"
            android:layout_marginLeft="@dimen/button_home_margin"
            android:layout_marginBottom="@dimen/button_home_margin"/>

	    <Button
	        android:id="@+id/button_gallery"
            style="@style/Button.Home.Light"
			android:layout_alignLeft="@+id/button_dynamic"
			android:layout_below="@+id/button_dynamic"
	        android:text="@string/button_gallery"
            android:onClick="buttonAction"
            android:layout_marginTop="@dimen/button_home_margin"
            android:layout_marginRight="@dimen/button_home_margin"/>
	
	    <Button
	        android:id="@+id/button_settings"
            style="@style/Button.Home.Dark"
	        android:layout_toRightOf="@+id/button_gallery"
	        android:layout_below="@+id/button_single"
	        android:text="@string/button_settings"
            android:onClick="buttonAction"
            android:layout_marginTop="@dimen/button_home_margin"
            android:layout_marginLeft="@dimen/button_home_margin"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="Footer image"
        android:src="@drawable/footer_home"
        android:layout_alignParentLeft="true"
        android:scaleType="centerInside"
        android:maxHeight="30dp"
        android:adjustViewBounds="true"/>

</RelativeLayout>