<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        >

    <!--<RelativeLayout-->
            <!--android:id="@+id/rlHeader"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginTop="10dp"-->
            <!-->-->
    <!--</RelativeLayout>-->

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:src="@drawable/header"
            android:scaleType="centerInside"/>

    <RelativeLayout
            android:id="@+id/rlContentWrapper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header"
            android:layout_above="@+id/footer"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <TextView
                android:id="@+id/textfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world"
                />

        <Button
                android:id="@+id/button_settings"
                style="@style/Button.Default.Light"
                android:text="@string/button_settings"
                android:onClick="buttonAction"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/button_default_margin"
                />

        <Button
                android:id="@+id/button_set_wallpaper"
                style="@style/Button.Default.Light"
                android:layout_toRightOf="@+id/button_settings"
                android:text="@string/button_set_wallpaper"
                android:onClick="buttonAction"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/button_default_margin"
                />

    </RelativeLayout>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/footer"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="true"
            android:scaleType="centerInside"
            android:src="@drawable/footer"
            android:adjustViewBounds="true"
            android:maxHeight="30dp"/>

    <!--<RelativeLayout-->
            <!--android:id="@+id/rlFooter"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginTop="5dp">-->
    <!--</RelativeLayout>-->

</RelativeLayout>